--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "export": "next build && next export"
+    "build": "next build && next export",
+    "start": "next start"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
